fixing content page alignment

--- a/src/components/Content/Content.styles.scss
+++ b/src/components/Content/Content.styles.scss
@@ -1,6 +1,6 @@
 .content-container {
     width: 1000px;
-    border: 1px solid red;
+    background-color: #161b22;
     height: 100vh;
-    padding: 1rem;
+    margin-top: 1rem;
 }
