--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -1,6 +1,6 @@
 .navbar {
     background-color: #161b22;
-    width: 100%;
+    width: 1000px;
     height: 70px;
     display: flex;
     align-items: center;
